--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^8.1",
         "diglactic/laravel-breadcrumbs": "^8.1",
+        "firebase/php-jwt": "^6.8",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.4",
         "innocenzi/laravel-vite": "0.3.*",
